Fixed web page from zooming out on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -87,7 +87,7 @@ body{
   margin: 10px 0 0 10px;
   white-space: nowrap;
   overflow: hidden;
-  width: 30em;
+
   animation: type 4s steps(60, end); 
   margin-top: 50px;
   margin-left: 100px;
